src/test/ui/const-generics/issues/issue-62579-no-match.min.stderr
error: `NoMatch` is forbidden as the type of a const generic parameter
  --> $DIR/issue-62579-no-match.rs:9:17
   |
LL | fn foo<const T: NoMatch>() -> bool {
   |                 ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: aborting due to previous error

